welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ( vacation==false && (day>0 && day<=5)) { 
		return "7:00"
	} 
	if ( vacation==false && (day==0 || day==6 )) {
		return "10:00"
	}
	
	
	if ( (day>0 && day<=5) && vacation==true) { 
		return "10:00" 
	}
	if ( (day==0 && day==6) && vacation=true) {
	return "off" }
	
}

